# TMW_Bot

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: main.yml
cogs/: auto_receive.py  bookmark.py  custom_role.py  daily_question.py  dumb_db.py  event_roles.py  gatekeeper.py  immersion_bar_races.py  immersion_goals.py  immersion_stats.py  info.py  kneels.py  rank_saver.py  selfmute.py  sticky_messages.py  sync.py  thread_resolver.py  writing_club.py
config/: auto_receive.yml  custom_role_settings.yml  daily_questions_settings.yml  gatekeeper_settings.yml  rank_saver_settings.yml  selfmute_settings.yml  writing_club_settings.yml
lib/: anilist_autocomplete.py  bot.py  db.py  helpers.py  models.py  tmdb_autocomplete.py  username.py  vndb_autocomplete.py
